# projet_th_S8

./: .gitignore  Présentation.pptx  Présentation_E.pptx  Présentation_final.pptx  README.md  Rapport.docx  Rapport2.docx  schema_emis.pptx  schema_recept.pptx  ~$apport.docx  ~$pport2.docx  ~WRL1631.tmp
Interface matlab radio/: fichier2radio.grc  fichier2radio.py  radio2fichier.grc  radio2fichier.py
Projets8/: CMakeLists.txt  PRBS_insert.m  PS_FFT.m  SP_IFFT.m  calc_offset.m  corr_detect_max.m  corr_detect_pilote.m  correct_offset.m  correl_cp.m  cp_calc.m  decision.m  detect_pics.m  insert_cp.m  main.cpp  moyenne_offset.m  offset_calc.m  prelvmt_pilote.m  simu_fct.m  supp_cp.m  test.m  test_fonction.m  test_matlab.asv  test_matlab.m  test_matlab_com2.asv  test_matlab_com2.m  test_matlab_com3.asv  test_matlab_com3.m  test_matlab_com3_copie.asv  test_matlab_com3_copie.m
cpp/: CMakeCache.txt  CMakeLists.txt  Signal.cpp  Signal.h  header.h  main.cpp  mainSend.cpp  mainTest.cpp
cpp/cmake/Modules/: Finduhd.cmake
